@@ -1,3 +1,4 @@
+/* (c) https://github.com/MontiCore/monticore */
 package de.monticore.cdconcretization.util;
 
 import de.monticore.cd4codebasis._symboltable.CDMethodSignatureSymbol;
@@ -11,67 +12,59 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 public class MethodSignatureString {
-
+  
   private MethodSignatureString() {}
-
-  public static Optional<MethodSymbol> resolveMethodSignature(
-      IOOSymbolsScope scope, String signatureString) {
+  
+  public static Optional<MethodSymbol> resolveMethodSignature(IOOSymbolsScope scope,
+      String signatureString) {
     if (signatureString.contains("(")) {
       return resolveMethodSignatureWithArgs(scope, signatureString);
-    } else {
+    }
+    else {
       return resolvePlainMethodSymbol(scope, signatureString);
     }
   }
-
-  private static Optional<MethodSymbol> resolveMethodSignatureWithArgs(
-      IOOSymbolsScope scope, String signatureString) {
+  
+  private static Optional<MethodSymbol> resolveMethodSignatureWithArgs(IOOSymbolsScope scope,
+      String signatureString) {
     String methodName = signatureString.substring(0, signatureString.indexOf("("));
     if (signatureString.charAt(signatureString.length() - 1) != ')') {
-      Log.error(
-          "Method signature: '" + signatureString + "' is not valid. Missing closing parenthesis.");
+      Log.error("Method signature: '" + signatureString
+          + "' is not valid. Missing closing parenthesis.");
       return Optional.empty();
     }
-    String argsString =
-        signatureString.substring(signatureString.indexOf("(") + 1, signatureString.length() - 1);
-    List<String> argTypes =
-        argsString.isBlank()
-            ? List.of()
-            : List.of(argsString.split(",")).stream()
-                .map(String::trim)
-                .collect(Collectors.toList());
-    List<Optional<TypeSymbol>> optTypeSymbols =
-        argTypes.stream()
-            .map(
-                typeName -> {
-                  Optional<TypeSymbol> symbolOpt = scope.resolveType(typeName);
-                  if (symbolOpt.isEmpty()) {
-                    Log.error(
-                        "Type symbol: '" + typeName + "' is not found in scope " + scope.getName());
-                  }
-                  return symbolOpt;
-                })
-            .collect(Collectors.toList());
+    String argsString = signatureString.substring(signatureString.indexOf("(") + 1, signatureString
+        .length() - 1);
+    List<String> argTypes = argsString.isBlank() ? List.of() : List.of(argsString.split(","))
+        .stream().map(String::trim).collect(Collectors.toList());
+    List<Optional<TypeSymbol>> optTypeSymbols = argTypes.stream().map(typeName -> {
+      Optional<TypeSymbol> symbolOpt = scope.resolveType(typeName);
+      if (symbolOpt.isEmpty()) {
+        Log.error("Type symbol: '" + typeName + "' is not found in scope " + scope.getName());
+      }
+      return symbolOpt;
+    }).collect(Collectors.toList());
     if (optTypeSymbols.stream().anyMatch(Optional::isEmpty)) {
       return Optional.empty();
     }
-    List<TypeSymbol> typeSymbols =
-        optTypeSymbols.stream().map(Optional::get).collect(Collectors.toList());
-
-    List<MethodSymbol> matchingSymbols =
-        scope.resolveMethodMany(methodName).stream()
-            .filter(method -> isParameterSignatureMatching(method.getParameterList(), typeSymbols))
-            .collect(Collectors.toList());
+    List<TypeSymbol> typeSymbols = optTypeSymbols.stream().map(Optional::get).collect(Collectors
+        .toList());
+    
+    List<MethodSymbol> matchingSymbols = scope.resolveMethodMany(methodName).stream().filter(
+        method -> isParameterSignatureMatching(method.getParameterList(), typeSymbols)).collect(
+            Collectors.toList());
     if (matchingSymbols.size() <= 1) {
       return matchingSymbols.stream().findFirst();
-    } else {
-      Log.error(
-          "Method signature: '" + signatureString + "' is not unique in scope " + scope.getName());
+    }
+    else {
+      Log.error("Method signature: '" + signatureString + "' is not unique in scope " + scope
+          .getName());
       return Optional.empty();
     }
   }
-
-  private static boolean isParameterSignatureMatching(
-      List<VariableSymbol> parameterSymbols, List<TypeSymbol> signatureTypeSymbols) {
+  
+  private static boolean isParameterSignatureMatching(List<VariableSymbol> parameterSymbols,
+      List<TypeSymbol> signatureTypeSymbols) {
     if (parameterSymbols.size() != signatureTypeSymbols.size()) {
       return false;
     }
@@ -82,18 +75,19 @@ public class MethodSignatureString {
     }
     return true;
   }
-
-  private static Optional<MethodSymbol> resolvePlainMethodSymbol(
-      IOOSymbolsScope scope, String symbol) {
+  
+  private static Optional<MethodSymbol> resolvePlainMethodSymbol(IOOSymbolsScope scope,
+      String symbol) {
     List<MethodSymbol> matchingSymbols = scope.resolveMethodMany(symbol);
     if (matchingSymbols.size() <= 1) {
       return matchingSymbols.stream().findFirst();
-    } else {
+    }
+    else {
       Log.error("Method symbol: '" + symbol + "' is not unique in scope " + scope.getName());
       return Optional.empty();
     }
   }
-
+  
   /**
    * Prints the full signature of a method symbol, if the method is overloaded. Otherwise, it only
    * returns the full name of the method symbol.
@@ -102,18 +96,16 @@ public class MethodSignatureString {
    * @return the full signature of the method symbol, or its name if it is not overloaded
    */
   public static String printSignatureIfOverloaded(CDMethodSignatureSymbol methodSymbol) {
-    int methodsWithSameName =
-        methodSymbol
-            .getEnclosingScope()
-            .resolveCDMethodSignatureMany(methodSymbol.getFullName())
-            .size();
+    int methodsWithSameName = methodSymbol.getEnclosingScope().resolveCDMethodSignatureMany(
+        methodSymbol.getFullName()).size();
     if (methodsWithSameName > 1) {
       return printSignature(methodSymbol);
-    } else {
+    }
+    else {
       return methodSymbol.getFullName();
     }
   }
-
+  
   public static String printSignature(CDMethodSignatureSymbol methodSymbol) {
     StringBuilder builder = new StringBuilder();
     builder.append(methodSymbol.getFullName());
@@ -128,4 +120,5 @@ public class MethodSignatureString {
     builder.append(")");
     return builder.toString();
   }
+  
 }
